# RustUML

./: .gitignore  Cargo.toml  Rust UML Syntax.txt  Rust UML.pap  Ziele.txt
docs/: README.md  Second.md  _sidebar.md  anwendung.md  diagrammplanung.md  html_anwendung.md  index.html  regex.md  schnittstelle.md  syntax.md  web_anwendung.md
docs/styles/: style.css
entwicklung/: RegexTest  RegexTest.txt  Rust UML Syntax.txt  Workaround bei RawGithub Einbindung.txt  Ziele.txt
rust_uml/: .gitignore  Cargo.toml  Neues Textdokument.txt  Web.toml  classexample.txt  test.txt  testclass.txt  testusecase.txt  usecaseexample.txt
rust_uml/src/: api.rs  api_htmlfile.rs  api_yew.rs  build_class_diagram.rs  build_class_svg.rs  build_usecase_diagram.rs  build_usecase_svg.rs  check_file.rs  examples.rs  get_diagram_type.rs  lib.rs  main.rs  struckt_to_string.rs  svglib.rs
rust_uml/src/parsing/: mod.rs  parse_class.rs  parse_usecase.rs
rust_uml/static/: htmlanwendung.html  index.html  style.css
