[package]
name = "rust_uml"
version = "0.1.0"
authors = ["mwithoeft <moritz_pit.withoeft@fh-bielefeld.de>"]

[dependencies]
regex = "1"
image = "0.20.1"
imageproc = "0.16.0"
conv = "0.3.1"
itertools = "0.7.0"
num = "0.2.0"
quickcheck = "0.6"
rand = "0.4.0"
rusttype = "0.5"
rayon = "1.0"
either = { version = "1.0", default-features = false }